k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hirequest-ingress
  namespace: hirequest
spec:
  rules:
    - host: hirequest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hirequest-frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: hirequest-backend
                port:
                  number: 8000
